# Rust-Web-Programming-3E

./: .gitignore  README.md
chapter01/building-structs/: Cargo.toml
chapter01/error_handling/: Cargo.toml
chapter01/immutable-borrows/: Cargo.toml
chapter01/mapping-data-with-enums/: Cargo.toml
chapter01/mapping-data-with-hashmaps/: Cargo.toml
chapter01/moving-variables/: Cargo.toml
chapter01/mutable-borrows/: Cargo.toml
chapter01/scopes/: Cargo.toml
chapter01/storing-data-in-arrays/: Cargo.toml
chapter01/storing-data-in-vectors/: Cargo.toml
chapter011/typestate/: Cargo.toml
chapter02/building_dal/: Cargo.toml
chapter02/checking-struct-state-with-the-compiler/: Cargo.toml
chapter02/configuring-out-functions-with-traits/: Cargo.toml
chapter02/managing_structs_with_api/: Cargo.toml
chapter02/using_dal/to_do/core/: Cargo.toml  tasks.json
chapter02/using_dal/to_do/core/src/: main.rs
chapter02/using_dal/to_do/core/src/api/basic_actions/: create.rs
chapter03/hyper_http/: Cargo.toml
chapter03/hyper_http/src/: main.rs
chapter04/handling_errors_in_api_endpoints/nanoservices/to_do/dal/: Cargo.toml
chapter05/connecting-the-core-to-the-server/to_do/networking/hyper_server/: Cargo.toml
chapter05/getting_single_items/nanoservices/to_do/core/: Cargo.toml
chapter05/handling-errors-in-api-endpoints/glue/: Cargo.toml
chapter05/handling-errors-in-api-endpoints/glue/src/: errors.rs
chapter07/building-out-a-development-setup/glue/: Cargo.toml
chapter07/connecting-backend-api-endpoints-to-the-frontend/alternative-ingresses/hyper-ingress/: Cargo.toml
chapter07/creating-react-components/ingress/: Cargo.toml  tasks.json
chapter07/wasm-interface/wasm-client/: Cargo.toml
chapter07/wasm-interface/wasm-client/src/: main.rs
chapter08/creating-migrations/ingress/: Cargo.toml
chapter08/creating-migrations/ingress/frontend/: package-lock.json
chapter08/creating-migrations/ingress/frontend/src/api/: create.ts  update.ts
chapter08/creating-migrations/ingress/src/: main.rs
chapter09/building-our-server-structure/nanoservices/auth/dal/: Cargo.toml
chapter09/connecting-our-transactions-to-the-server/nanoservices/to_do/dal/: Cargo.toml
chapter09/creating-users/: Cargo.toml
chapter09/creating-users/nanoservices/auth/core/src/api/: mod.rs
chapter09/creating-users/nanoservices/auth/core/src/api/users/: create.rs
chapter09/creating-users/nanoservices/auth/dal/src/users/transactions/: create.rs
chapter09/creating-users/nanoservices/to_do/core/: tasks.json
chapter09/creating-users/nanoservices/to_do/core/src/api/basic_actions/: get.rs
chapter09/creating-users/nanoservices/to_do/dal/src/connections/: mod.rs
chapter09/creating-users/nanoservices/to_do/networking/actix_server/: Cargo.toml
chapter09/creating-users/nanoservices/to_do/networking/actix_server/src/api/basic_actions/: delete.rs
chapter09/how-to-use-docker/: Cargo.toml
chapter09/how-to-use-docker/glue/src/: token.rs
chapter09/how-to-use-docker/nanoservices/to_do/core/src/api/basic_actions/: delete.rs
chapter09/how-to-use-docker/nanoservices/to_do/networking/axum_server/src/api/basic_actions/: create.rs  get.rs
chapter10/adding-authentication-to-our-frontend/nanoservices/auth/dal/: Cargo.toml
chapter10/adding-authentication-to-our-frontend/nanoservices/auth/dal/src/users/transactions/: get.rs
chapter10/defining-our-user-model/nanoservices/auth/dal/: Cargo.toml
chapter10/defining-our-user-model/nanoservices/auth/dal/src/users/: schema.rs
chapter10/defining-our-user-model/nanoservices/to_do/core/: Cargo.toml
chapter12/building-our-cache-kernel/nanoservices/auth/kernel/: Cargo.toml
chapter12/building-our-cache-kernel/nanoservices/auth/kernel/src/: lib.rs
chapter12/building-our-cache-kernel/nanoservices/auth/kernel/src/user_session/: mod.rs
chapter12/building-our-cache-kernel/nanoservices/auth/kernel/src/user_session/transactions/: mod.rs
chapter12/building-the-update-process/ingress/: Cargo.toml
chapter12/building-the-update-process/ingress/src/: main.rs
chapter13/configuring-our-logging-database/alternative-ingresses/axum-ingress/: Cargo.toml
chapter13/terminal-logger/glue/: Cargo.toml
chapter13/terminal-logger/glue/src/logger/: logger.rs  mod.rs
chapter13/terminal-logger/glue/src/logger/network_wrappers/: actix_web.rs  mod.rs
chapter13/update-logging-functions/glue/: Cargo.toml
chapter15/configuring-existing-code-to-accommodate-the-workflow-tests/glue/: Cargo.toml
chapter15/creating-workflows-test-workspace/ingress/: Cargo.toml
chapter15/running-our-atomic-end-to-end-test/nanoservices/to_do/dal/: Cargo.toml
chapter15/running-our-atomic-end-to-end-test/nanoservices/to_do/kernel/: Cargo.toml
chapter15/running-our-atomic-end-to-end-test/nanoservices/to_do/kernel/src/api/basic_actions/: delete.rs
chapter16/defining-the-build-config-for-our-microservices/: Cargo.toml
chapter16/defining-the-build-config-for-our-microservices/builds/: run_build.sh
chapter16/defining-the-build-config-for-our-microservices/ingress/frontend/: build-config.yml
chapter16/defining-the-build-config-for-our-microservices/ingress/frontend/src/: Login.css  index.tsx
chapter16/defining-the-build-config-for-our-microservices/nanoservices/auth/dal/src/connections/: sqlx_postgres.rs
chapter16/defining-the-build-config-for-our-microservices/nanoservices/auth/networking/actix_server/src/api/auth/: login.rs
chapter16/defining-the-build-config-for-our-microservices/nanoservices/auth/networking/actix_server/src/api/users/: get.rs
chapter16/defining-the-build-config-for-our-microservices/nanoservices/to_do/dal/src/to_do_items/: schema.rs
chapter16/defining-the-build-config-for-our-microservices/nanoservices/to_do/dal/src/to_do_items/transactions/: create.rs  delete.rs
chapter16/defining-the-build-config-for-our-microservices/nanoservices/to_do/networking/actix_server/src/api/basic_actions/: mod.rs  update.rs
chapter20/building-our-client/server/: Cargo.toml
chapter20/building-our-server/worker/: Cargo.toml
chapter20/building-our-server/worker/src/: main.rs
(+1120 files in other folders)
