[package]
name = "glue"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = { version = "4.9.0", optional = true }
rocket = { version = "0.5.1", features = ["json"], optional = true }
axum = { version = "0.7.5", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"

[features]
actix = ["actix-web"]
rocket = ["rocket"]
axum = ["axum"]
