[package]
name = "glue"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5.1", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"

[features]
actix = ["actix-web"]
