[package]
name = "glue"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = { version = "4.9.0", optional = true }
rocket = { version = "0.5.1", features = ["json"], optional = true }
axum = { version = "0.8.4", optional = true }
tower = { version = "0.5.2", optional = true }
hyper = { version = "1.2.0", features = ["full"], optional = true}
serde_json = { version = "1.0.128", optional = true }
http-body-util = { version = "0.1.1", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "2.0.12"
futures = "0.3.30"
jsonwebtoken = "9.3.1"
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"

tokio = { version = "1.38.1", optional = true}
reqwest = { version = "0.12.5", optional = true }
chrono = { version = "0.4.38", optional = true }


[features]
actix = ["dep:actix-web"]
rocket = ["dep:rocket"]
axum = ["dep:axum", "dep:tower"]
hyper = ["dep:hyper", "dep:serde_json", "dep:http-body-util"]
elastic-logger = ["dep:serde_json", "dep:tokio", "dep:reqwest", "dep:chrono"]
