# File: worker/Cargo.toml
[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "27.0.0"
wasmtime-wasi = { version = "27.0.0", features = ["preview1"]}
tokio = { version = "1.37.0", features = ["full"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kernel = { path = "../kernel" }
