[package]
name = "dal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json-file = ["serde_json", "serde"]

[dependencies]
serde_json ={ version="1.0.114", optional = true }
serde ={ version="1.0.197", optional = true }
glue = { path = "../../../glue"}