[package]
name = "to-do-hyper-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.2.0", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["full"] }
to-do-core = { path = "../../core" }
