[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dal = { path = "../dal", features = ["json-file"] }
serde = { version = "1.0.197", features = ["derive"] }
glue = { path = "../../../glue"}
