[package]
name = "auth-dal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde ={ version="1.0.197", features = ["derive"] }
glue = { path = "../../../glue"}
sqlx = { version = "0.7.4", features = ["postgres", "json", "runtime-tokio"], optional = false }
once_cell = { version = "1.19.0", optional = false }
