[package]
name = "auth-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
auth-core = { path = "../core", optional = true }
auth-dal = { path = "../dal" }
reqwest = {version = "0.12.5", optional = true, features = ["json"]}
glue = { path = "../../../glue" }
cache-client = { path = "../../user-session-cache/cache-client" }

[features]
http = ["reqwest"]
core-postgres = ["auth-core"]
