[package]
name = "dal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json-file = ["serde_json"]
sqlx-postgres = ["sqlx", "once_cell"]

[dependencies]
serde ={ version="1.0.197", features = ["derive"] }
glue = { path = "../../../glue"}

# for json-file
serde_json ={ version="1.0.114", optional = true }

# for sqlx-postgres
sqlx = { version = "0.7.4", features = ["postgres", "json", "runtime-tokio"], optional = true }
once_cell = { version = "1.19.0", optional = true }

[dev-dependencies]
tokio = { version = "1.16.1", features = ["full"] }
