[package]
name = "to-do-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core", optional = true }
dal = { path = "../dal" }
reqwest = { version = "0.12.5", optional = true, features = ["json"] }
glue = { path = "../../../glue" }
cache-client = { path = "../../user-session-cache/cache-client" }

[features]
http = ["dep:reqwest"]
default = ["http"]